fixed spacing issue

--- a/usage.css
+++ b/usage.css
@@ -185,7 +185,7 @@ body {
 	height:60px;
 	width:300px;
 	position:relative;
-	bottom: -13px;
+	bottom: -15px;
 	left:0px;
 	background-color:#b146c3;
 
